--- a/frontend/xacria-presenze/src/app/layout/sidebar/sidebar.component.scss
+++ b/frontend/xacria-presenze/src/app/layout/sidebar/sidebar.component.scss
@@ -1,10 +1,8 @@
 
 #side_nav{
   min-width: 215px;
-  max-width: 215px;
   min-height: 100%;
   background-color: #d9d9d9;
-  padding: 65px 20px 16px 30px;
   position: relative;
 }
 
