--- a/frontend/xacria-presenze/src/styles.scss
+++ b/frontend/xacria-presenze/src/styles.scss
@@ -50,12 +50,7 @@
 body, html{
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
-
-
-
-
 @media (max-width: 480px) {
   .addEventModal{
     width: 100vh;
